--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@astrojs/mdx": "^3.1.3",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
-    "astro": "^4.12.2"
+    "astro": "^4.12.2",
+    "astro-icon": "^1.1.4"
   },
   "engines": {
     "node": ">=10",
     "pnpm": ">=3"
+  },
+  "devDependencies": {
+    "@iconify-json/mdi": "^1.2.1"
   }
 }
