--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^3.1.3",
-    "@astrojs/rss": "^4.0.7",
-    "@astrojs/sitemap": "^3.1.6",
-    "astro": "^4.12.2",
-    "astro-icon": "^1.1.4"
+    "@astrojs/mdx": "^3.1.9",
+    "@astrojs/rss": "^4.0.11",
+    "@astrojs/sitemap": "^3.2.1",
+    "astro": "^4.16.18",
+    "astro-icon": "^1.1.5"
   },
   "engines": {
     "node": ">=10",
     "pnpm": ">=3"
   },
   "devDependencies": {
+    "@iconify-json/cib": "^1.2.2",
     "@iconify-json/ic": "^1.2.2",
-    "@iconify-json/mdi": "^1.2.1"
+    "@iconify-json/mdi": "^1.2.3"
   }
 }
